tests/negative/runtime/arrayset_large_index/input.ci
void main() {
    int[] xs = [1];
    arraySet(xs, 99, 2);
}
